# androidLogcatEngine

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/logcatengine/: build.gradle.kts
app/src/androidTest/java/com/pt/jp/logcatengine/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pt/jp/logcatengine/: MainActivity.kt
app/src/main/java/com/pt/jp/logcatengine/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/pt/jp/logcatengine/: ExampleUnitTest.kt
core/: build.gradle.kts  consumer-rules.pro
core/src/androidTest/java/com/core/logcat/capture/: ExampleInstrumentedTest.kt
core/src/main/: AndroidManifest.xml
core/src/main/aidl/com/core/logcat/capture/: ILogControl.aidl
core/src/main/java/com/core/logcat/capture/core/: LogManager.kt  LoggerServiceConnection.kt
core/src/main/java/com/core/logcat/capture/service/: LogService.kt
core/src/main/jni/: CMakeLists.txt  LogEngine.cpp  LogEngine.hpp  LogEngine_jni.cpp
core/src/test/java/com/core/logcat/capture/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
